<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">KeePro Unlocker</string>

    <!-- Checkout activity -->
    <string name="item_description">Description</string>

    <string name="no_url_handler">Install a web browser to open this URL.</string>

    <string name="keepassdx" translatable="false">KeePassDX Pro</string>
    <string name="keepassdx_desc">KeePass password manager, the Pro version unlocks themes and gives access to non-free protocol services</string>
    <string name="key_driver" translatable="false">Key Driver</string>
    <string name="key_driver_desc">Driver for physical key that manages Yubikey and SoloKey</string>
    <string name="filesync" translatable="false">FileSync</string>
    <string name="filesync_desc">File manager that allows synchronization and secure storage of files</string>

    <string name="thank_you">Thank you for your contribution!</string>
    <string name="thanks_to_you">Thanks to you, applications can be maintained and features are added regularly.</string>
    <string name="first_contribute">You\'re an early contributor, so you will have access to the advanced features of the new open source Kunzisoft apps that will be deployed in the future, so keep this app installed to enjoy your benefits.</string>
    <string name="content_unlock">This content is now unlocked:</string>
    <string name="content_help">You also help with the realization of applications under development:</string>

    <string name="keepassdx_merge">To further improve the user experience, KeePassDX and KeePassDX Pro are merging into the same KeePassDX app and this app becomes a contributing app.\n\nOf course, you keep all the advantages already acquired, but you have to re-download the KeePassDX app to reintegrate your settings.</string>
    <string name="keepassdx_migrate">How do I migrate settings?</string>
    <string name="keepassdx_export_settings">Export Settings</string>


    <string name="app_properties_file_name" translatable="false">keepassdx_pro.properties</string>
    <string name="description_app_properties">KeePassDX properties to manage app settings</string>
    <string name="success_export_app_properties">App properties exported</string>
    <string name="error_export_app_properties">Error during app properties exportation</string>

    <string name="allow_no_password_key" translatable="false">allow_no_password_key</string>
    <string name="delete_entered_password_key" translatable="false">delete_entered_password_key</string>
    <string name="enable_read_only_key" translatable="false">enable_read_only_key</string>
    <string name="enable_auto_save_database_key" translatable="false">enable_auto_save_database_key</string>
    <string name="enable_keep_screen_on_key" translatable="false">enable_keep_screen_on_key</string>
    <string name="auto_focus_search_key" translatable="false">auto_focus_search_key</string>
    <string name="subdomain_search_key" translatable="false">subdomain_search_key</string>
    <string name="app_timeout_key" translatable="false">app_timeout_key</string>
    <string name="lock_database_screen_off_key" translatable="false">lock_database_screen_off_key</string>
    <string name="lock_database_back_root_key" translatable="false">lock_database_back_root_key</string>
    <string name="lock_database_show_button_key" translatable="false">lock_database_show_button_key</string>
    <string name="password_length_key" translatable="false">password_length_key</string>
    <string name="list_password_generator_options_key" translatable="false">list_password_generator_options_key</string>
    <string name="hide_password_key" translatable="false">hide_password_key</string>
    <string name="allow_copy_password_key" translatable="false">allow_copy_password_key</string>
    <string name="remember_database_locations_key" translatable="false">remember_database_locations_key</string>
    <string name="show_recent_files_key" translatable="false">show_recent_files_key</string>
    <string name="hide_broken_locations_key" translatable="false">hide_broken_locations_key</string>
    <string name="remember_keyfile_locations_key" translatable="false">remember_keyfile_locations_key</string>
    <string name="advanced_unlock_explanation_key" translatable="false">advanced_unlock_explanation_key</string>
    <string name="biometric_unlock_enable_key" translatable="false">biometric_unlock_enable_key</string>
    <string name="device_credential_unlock_enable_key" translatable="false">device_credential_unlock_enable_key</string>
    <string name="biometric_auto_open_prompt_key" translatable="false">biometric_auto_open_prompt_key</string>
    <string name="temp_advanced_unlock_enable_key" translatable="false">temp_advanced_unlock_enable_key</string>
    <string name="temp_advanced_unlock_timeout_key" translatable="false">temp_advanced_unlock_timeout_key</string>
    <string name="temp_advanced_unlock_timeout_default" translatable="false">36000000</string>
    <string name="biometric_delete_all_key_key" translatable="false">biometric_delete_all_key_key</string>
    <string name="magic_keyboard_key" translatable="false">magic_keyboard_key</string>
    <string name="magic_keyboard_preference_key" translatable="false">magic_keyboard_preference_key</string>
    <string name="clipboard_explanation_key" translatable="false">clipboard_explanation_key</string>
    <string name="clipboard_notifications_key" translatable="false">clipboard_notifications_key</string>
    <string name="clear_clipboard_notification_key" translatable="false">clear_clipboard_notification_key</string>
    <string name="clipboard_timeout_key" translatable="false">clip_timeout_key</string>
    <string name="clipboard_timeout_default" translatable="false">20000</string>
    <string name="autofill_key" translatable="false">autofill_key</string>
    <string name="autofill_explanation_key" translatable="false">autofill_explanation_key</string>
    <string name="settings_autofill_enable_key" translatable="false">settings_autofill_enable_key</string>
    <string name="settings_autofill_key" translatable="false">settings_autofill_key</string>
    <string name="keyboard_notification_entry_key" translatable="false">keyboard_notification_entry_key</string>
    <string name="keyboard_notification_entry_clear_close_key" translatable="false">keyboard_notification_entry_clear_close_key</string>
    <string name="keyboard_entry_timeout_key" translatable="false">keyboard_entry_timeout_key</string>
    <string name="keyboard_entry_timeout_default" translatable="false">30000</string>
    <string name="keyboard_selection_entry_key" translatable="false">keyboard_selection_entry_key</string>
    <string name="keyboard_search_share_key" translatable="false">keyboard_search_share_key</string>
    <string name="keyboard_save_search_info_key" translatable="false">keyboard_save_search_info_key</string>
    <string name="keyboard_auto_go_action_key" translatable="false">keyboard_auto_go_action_key</string>
    <string name="keyboard_key_vibrate_key" translatable="false">keyboard_key_vibrate_key</string>
    <string name="keyboard_key_sound_key" translatable="false">keyboard_key_sound_key</string>
    <string name="keyboard_previous_database_credentials_key" translatable="false">keyboard_previous_database_credentials_key</string>
    <string name="keyboard_previous_fill_in_key" translatable="false">keyboard_previous_fill_in_key</string>
    <string name="keyboard_previous_lock_key" translatable="false">keyboard_previous_lock_key</string>
    <string name="autofill_close_database_key" translatable="false">autofill_close_database_key</string>
    <string name="autofill_auto_search_key" translatable="false">autofill_auto_search_key</string>
    <string name="autofill_inline_suggestions_key" translatable="false">autofill_inline_suggestions_key</string>
    <string name="autofill_manual_selection_key" translatable="false">autofill_manual_selection_key</string>
    <string name="autofill_save_search_info_key" translatable="false">autofill_save_search_info_key</string>
    <string name="autofill_ask_to_save_data_key" translatable="false">autofill_ask_to_save_data_key</string>
    <string name="autofill_application_id_blocklist_key" translatable="false">autofill_application_id_blocklist_key</string>
    <string name="autofill_web_domain_blocklist_key" translatable="false">autofill_web_domain_blocklist_key</string>
    <string name="setting_style_key" translatable="false">setting_style_key</string>
    <string name="setting_style_brightness_key" translatable="false">setting_style_brightness_key</string>
    <string name="setting_icon_pack_choose_key" translatable="false">setting_icon_pack_choose_key</string>
    <string name="show_entry_colors_key" translatable="false">show_entry_colors_key</string>
    <string name="list_entries_show_username_key" translatable="false">list_entries_show_username_key</string>
    <string name="list_groups_show_number_entries_key" translatable="false">list_groups_show_number_entries_key</string>
    <string name="show_otp_token_key" translatable="false">show_otp_token_key</string>
    <string name="show_uuid_key" translatable="false">show_uuid_key</string>
    <string name="list_size_key" translatable="false">list_size_key</string>
    <string name="monospace_font_fields_enable_key" translatable="false">monospace_font_extra_fields_enable_key</string>
    <string name="hide_expired_entries_key" translatable="false">hide_expired_entries_key</string>
    <string name="enable_education_screens_key" translatable="false">enable_education_screens_key</string>
    <string name="reset_education_screens_key" translatable="false">relaunch_education_screens_key</string>
    <string name="sort_node_key" translatable="false">sort_node_key</string>
    <string name="sort_group_before_key" translatable="false">sort_group_before_key</string>
    <string name="sort_ascending_key" translatable="false">sort_ascending_key</string>
    <string name="sort_recycle_bin_bottom_key" translatable="false">sort_recycle_bin_bottom_key</string>
    <string name="allow_copy_password_first_time_key" translatable="false">allow_copy_password_first_time_key</string>
</resources>