<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ContributorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/bg_icon"
            android:contentDescription="@string/app_name" />
        <TextView
            android:id="@+id/thank_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:gravity="center"
            android:text="@string/thank_you"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/thanks_to_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/thanks_to_you"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />
        <TextView
            android:layout_marginTop="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:text="@string/content_unlock"
            android:layout_gravity="center"
            android:gravity="center"/>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/keepassdxExportText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:gravity="center"
                android:textColor="?attr/colorPrimary"
                android:text="@string/keepassdx_merge"/>
            <Button
                android:id="@+id/keepassdxButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/keepassdx"/>
            <TextView
                android:id="@+id/keepassdxDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="?attr/colorSecondary"
                android:text="@string/keepassdx_desc"/>
            <Button
                android:id="@+id/keepassdxExportSettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?attr/materialButtonOutlinedStyle"
                android:text="@string/keepassdx_export_settings"/>
            <TextView
                android:id="@+id/keepassdxHowExportSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:layout_gravity="center"
                android:textColor="?attr/colorSecondary"
                android:text="@string/keepassdx_migrate"/>
        </LinearLayout>

        <TextView
            android:layout_marginTop="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:text="@string/content_help"
            android:layout_gravity="center"
            android:gravity="center"/>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <Button
                android:id="@+id/keyDriverButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/key_driver"/>
            <TextView
                android:id="@+id/keyDriverDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="?attr/colorSecondary"
                android:text="@string/key_driver_desc"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <Button
                android:id="@+id/filesyncButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filesync"/>
            <TextView
                android:id="@+id/filesyncDecription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="?attr/colorSecondary"
                android:text="@string/filesync_desc"/>
        </LinearLayout>

        <TextView
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:gravity="center"
            android:text="@string/first_contribute"/>
    </LinearLayout>
</ScrollView>